--- a/jumbo/index.html
+++ b/jumbo/index.html
@@ -171,43 +171,17 @@
             </div>
 
             <div class="navbar-end">
-            <a class="navbar-item is-hidden-desktop-only" href="#" target="_blank">
-                <span class="icon" style="color: #333;">
-                <i class="fa fa-lg fa-github"></i>
-                </span>
-            </a>
-            <a class="navbar-item is-hidden-desktop-only" href="#" target="_blank">
-                <span class="icon" style="color: #55acee;">
-                <i class="fa fa-lg fa-twitter"></i>
-                </span>
-            </a>
             <div class="navbar-item">
-                <div class="field is-grouped">
-                <p class="control">
-                    <a class="bd-tw-button button"
-        data-social-network="Twitter"
-        data-social-action="tweet"
-        data-social-target="#"
-        target="_blank"
-        href="#">
-        <span class="icon">
-            <i class="fa fa-twitter"></i>
-        </span>
-        <span>
-            Tweet
-        </span>
-        </a>
-
-                </p>
-                <p class="control">
-                    <a class="button is-primary" href="#">
-                    <span class="icon">
-                        <i class="fa fa-download"></i>
-                    </span>
-                    <span>Download</span>
-                    </a>
-                </p>
-                </div>
+                <div class="field has-addons">
+                    <div class="control">
+                      <input class="input" type="text" placeholder="Find a repository">
+                    </div>
+                    <div class="control">
+                      <a class="button is-danger">
+                        Search
+                      </a>
+                    </div>
+                </div>                  
             </div>
             </div>
         </div>
